[package]
name = "firebase-auth-actix"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.1"
actix-web = "3.3.2"
firebase-auth = { git = "https://github.com/chris-tomich/firebase-auth" }
futures = "0.3.17"